comment frame_splitter notebooker

--- a/frame_splitter.ipynb
+++ b/frame_splitter.ipynb
@@ -13,6 +13,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These files are huge! 10 million and 85ish million rows respectively. I need a way to split these dataframes up and then save then return these separate data frames as individual csv files for future access"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
@@ -42,6 +56,13 @@
     "        n += 1\n",
     "        df.to_csv('data/Twitter-dataset/{}{}.csv'.format(name,n),index=False)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data "
    ]
   },
   {
