clean up eploration notebook and begin looking into YouTube data

--- a/network_exploration.ipynb
+++ b/network_exploration.ipynb
@@ -17,59 +17,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "nodes = pd.read_csv('data/Twitter-dataset/data/nodes.csv',names=['nodes'])\n",
-    "edges = pd.read_csv('data/Twitter-dataset/data/edges.csv',names=['nodes','edges'])"
+    "## Read in the Data..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "G=nx.Graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "G.add_nodes_from(nodes['nodes'])"
+    "nodes = pd.read_csv('data/YouTube-dataset/data/nodes.csv',names=['node'])\n",
+    "edges = pd.read_csv('data/YouTube-dataset/data/edges.csv', names = ['node','edge'])\n",
+    "groups = pd.read_csv('data/YouTube-dataset/data/groups.csv',names=['group'])\n",
+    "edge_groups = pd.read_csv('data/YouTube-dataset/data/group-edges.csv', names = ['node','group'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...and explore a little."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>node</th>\n",
+       "      <th>group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>165</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "11316811"
+       "   node  group\n",
+       "0     1      1\n",
+       "1     3      1\n",
+       "2     5      1\n",
+       "3    72      1\n",
+       "4   165      1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "G.number_of_nodes()"
+    "edge_groups.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Network Mining"
    ]
   },
   {
@@ -80,17 +126,7 @@
    },
    "outputs": [],
    "source": [
-    "G=nx.from_pandas_dataframe(edges,'nodes','edges')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "G=nx.from_pandas_dataframe(edges,'nodes','edges')\n",
     "G.nodes()"
    ]
   },
