figure out what YouTube codes are and write down the reminder in the exploration notebook

--- a/network_exploration.ipynb
+++ b/network_exploration.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "...and explore a little."
+    "...and explore a little.\n",
+    "\n",
+    "Let me start by looking at edge_groups since the other data frames are a bit more intuitive. Okay, group affiliation is rather intuitive, but I honestly don't know what this is going to look like, so I need to start off by counting how many members each group has."
    ]
   },
   {
@@ -53,53 +55,55 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>node</th>\n",
-       "      <th>group</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>72</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>165</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   node  group\n",
-       "0     1      1\n",
-       "1     3      1\n",
-       "2     5      1\n",
-       "3    72      1\n",
-       "4   165      1"
+       "7     7583\n",
+       "21    3533\n",
+       "20    3083\n",
+       "31    1645\n",
+       "3     1539\n",
+       "17    1348\n",
+       "22    1310\n",
+       "23    1269\n",
+       "10    1218\n",
+       "19    1160\n",
+       "6     1108\n",
+       "41    1107\n",
+       "45    1104\n",
+       "30    1074\n",
+       "9     1071\n",
+       "5      982\n",
+       "16     944\n",
+       "29     898\n",
+       "32     843\n",
+       "24     832\n",
+       "18     830\n",
+       "39     823\n",
+       "38     790\n",
+       "4      788\n",
+       "13     779\n",
+       "46     763\n",
+       "44     742\n",
+       "8      681\n",
+       "27     658\n",
+       "42     629\n",
+       "35     626\n",
+       "43     624\n",
+       "26     616\n",
+       "25     598\n",
+       "2      589\n",
+       "28     584\n",
+       "11     583\n",
+       "47     572\n",
+       "1      567\n",
+       "37     560\n",
+       "34     540\n",
+       "14     540\n",
+       "33     525\n",
+       "36     511\n",
+       "12     511\n",
+       "15     509\n",
+       "40     502\n",
+       "dtype: int64"
       ]
      },
      "execution_count": 8,
@@ -108,7 +112,14 @@
     }
    ],
    "source": [
-    "edge_groups.head()"
+    "pd.value_counts(edge_groups['group'].values, sort=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's back up. What exactly is a YouTube group? According to this [site](http://desktopvideo.about.com/od/youtubegooglevideo/tp/Youtube-Groups.htm), a YouTube group is a network \"for like-minded users to share videos and discuss particular topics.\" Well, that's a starting point."
    ]
   },
   {
