add a question and some direction

--- a/network_exploration.ipynb
+++ b/network_exploration.ipynb
@@ -119,7 +119,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's back up. What exactly is a YouTube group? According to this [site](http://desktopvideo.about.com/od/youtubegooglevideo/tp/Youtube-Groups.htm), a YouTube group is a network \"for like-minded users to share videos and discuss particular topics.\" Well, that's a starting point."
+    "Let's back up. What exactly is a YouTube group? According to this [site](http://desktopvideo.about.com/od/youtubegooglevideo/tp/Youtube-Groups.htm), a YouTube group is a network \"for like-minded users to share videos and discuss particular topics.\" Well, that's a starting point. Perhaps I should look at the sparsity of each network..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions Worth Looking into\n",
+    "1. Can I predict group affiliation? [Here](http://www.public.asu.edu/~huanliu/papers/kdd09.pdf) is a paper that might help with the process."
    ]
   },
   {
